# AI

./: README.md  resnet18.py
dlib/: CMakeLists.txt  example.cpp
